--- a/src/sass/layout/_header.sass
+++ b/src/sass/layout/_header.sass
@@ -1,5 +1,17 @@
 .header
-    
-    &__in
-        display: flex
-            justify-content: space-between
+
+	&__info
+		padding: 14px 0
+		color: white
+		text-align: center
+		background-color: #AAD4DB
+
+	&__in
+		padding: 8px 80px 25px
+	
+	&__row
+		display: flex
+		justify-content: space-between
+
+	&__col
+		padding-top: 32px
