--- a/src/sass/components/_socials.sass
+++ b/src/sass/components/_socials.sass
@@ -1,3 +1,21 @@
 .socials 
-    display: flex
-    justify-content: space-between
+	display: flex
+	justify-content: space-between
+
+	&__item
+		margin-right: 32px
+		&:last-child
+			margin-right: 0
+
+	&__link
+		display: flex
+		font-size: 18px
+
+		svg
+			height: 22px
+
+		svg, path
+			transition: fill 0.4s ease
+
+		&:hover path, &:hover path
+			fill: $gold
