--- a/src/templates/page.html
+++ b/src/templates/page.html
@@ -8,6 +8,7 @@ title: Index page
 	
 
 	{% include "partials/_header.html" %}
+	{% include "partials/_hero.html" %}
 	
 	<!-- {# variable example #}
 	<h1>{{title}}</h1>
