--- a/src/sass/components/_hero.sass
+++ b/src/sass/components/_hero.sass
@@ -37,3 +37,16 @@
 
 		&--next
 			right: 24px
+
+	+r(1200)
+
+		&__slide
+			height: 460px
+
+		&__inner
+			width: 400px
+
+		&__title
+			font-size: 40px
+
+
