--- a/src/templates/partials/_hero.html
+++ b/src/templates/partials/_hero.html
@@ -1,26 +1,45 @@
 <div class="hero">
-	<div class="hero__slider js-hero-slider">
-		<div class="hero__slide" style="background-image: url('./img/hero-banner.jpg');">
-			<div class="hero__inner">
-				<h2 class="hero__title">Bigger Facial Bars, Enhanced with <br>Shea Butter</h2>
-				<p class="hero__description">Taces Years Off In Just Days</p>
-				<a href="#" class="hero__btn btn">Learn more</a>
+	<div class="hero__slider js-hero-slider slider">
+		<div class="slider__slide">
+			<div class="hero__slide">
+				<picture>
+					<source media="(max-width: 600px)" srcset="./img/hero-banner-mob.jpg">
+					<img src="./img/hero-banner.jpg" class="hero__slide-bg">
+				</picture>
+				<div class="hero__inner">
+					<h2 class="hero__title">Bigger Facial Bars, Enhanced with <br>Shea Butter</h2>
+					<p class="hero__description">Taces Years Off In Just Days</p>
+					<a href="#" class="hero__btn btn">Learn more</a>
+				</div>
+			</div>
+		</div>
+		
+
+		<div class="slider__slide">
+			<div class="hero__slide">
+				<picture>
+					<source media="(max-width: 600px)" srcset="./img/hero-banner-mob.jpg">
+					<img src="./img/hero-banner.jpg" class="hero__slide-bg">
+				</picture>
+				<div class="hero__inner">
+					<h2 class="hero__title">Bigger Facial Bars, Enhanced with <br>Shea Butter 2222</h2>
+					<p class="hero__description">Taces Years Off In Just Days</p>
+					<a href="#" class="hero__btn btn">Learn more</a>
+				</div>
 			</div>
 		</div>
 
-		<div class="hero__slide" style="background-image: url('./img/hero-banner.jpg');">
-			<div class="hero__inner">
-				<h2 class="hero__title">Bigger Facial Bars, Enhanced with <br>Shea Butter 22222</h2>
-				<p class="hero__description">Taces Years Off In Just Days</p>
-				<a href="#" class="hero__btn btn">Learn more</a>
-			</div>
-		</div>
-
-		<div class="hero__slide" style="background-image: url('./img/hero-banner.jpg');">
-			<div class="hero__inner">
-				<h2 class="hero__title">Bigger Facial Bars, Enhanced with <br>Shea Butter 33333</h2>
-				<p class="hero__description">Taces Years Off In Just Days</p>
-				<a href="#" class="hero__btn btn">Learn more</a>
+		<div class="slider__slide">
+			<div class="hero__slide">
+				<picture>
+					<source media="(max-width: 600px)" srcset="./img/hero-banner-mob.jpg">
+					<img src="./img/hero-banner.jpg" class="hero__slide-bg">
+				</picture>
+				<div class="hero__inner">
+					<h2 class="hero__title">Bigger Facial Bars, Enhanced with <br>Shea Butter 3333</h2>
+					<p class="hero__description">Taces Years Off In Just Days</p>
+					<a href="#" class="hero__btn btn">Learn more</a>
+				</div>
 			</div>
 		</div>
 	</div>
