--- a/src/sass/components/_hero.sass
+++ b/src/sass/components/_hero.sass
@@ -2,11 +2,19 @@
 	position: relative
 
 	&__slide
+		position: relative
 		height: 570px
 		padding-top: 88px
 		padding-left: 80px
-		background-position: right 0 top 0
-		background-size: cover
+
+		&-bg
+			position: absolute
+			top: 0
+			right: 0
+			height: 100%
+			width: 100%
+			object-fit: cover
+			z-index: -1
 
 	&__inner
 		width: 600px
@@ -38,15 +46,81 @@
 		&--next
 			right: 24px
 
+	.slick-dots
+		position: absolute
+		bottom: 24px
+		left: 50%
+		transform: translateX(-50%)
+		display: flex
+
+		li 
+			position: relative
+			margin-right: 8px
+			width: 12px
+			height: 12px
+			border: 1px solid #61A3AC
+			border-radius: 50%
+
+			&:last-child
+				margin-right: 0
+			&.slick-active:before
+				content: ''
+				position: absolute
+				top: 50%
+				left: 50%
+				transform: translate(-50%, -50%)
+				width: 8px
+				height: 8px
+				background-color: #61A3AC
+				border-radius: 50%
+				
+
+		button
+			font-size: 0
+			background-color: transparent
+
+
+
 	+r(1200)
 
 		&__slide
-			height: 460px
+			height: 400px
 
 		&__inner
 			width: 400px
 
 		&__title
 			font-size: 40px
+
+	+r(900)
+
+		&__slider-btn
+			display: none!important
+
+		&__slide
+			padding-top: 50px
+			padding-left: 20px 
+
+	+r(600)
+
+		&__slide
+			height: 550px
+			&-bg
+				top: auto
+				bottom: 0
+				right: 50%
+				transform: translateX(50%)
+
+		&__title
+			font-size: 24px
+			margin-bottom: 14px
+
+		&__inner
+			width: 300px
+
+		&__description
+			margin-bottom: 50px
+
+
 
 
