--- a/src/sass/components/_hero.sass
+++ b/src/sass/components/_hero.sass
@@ -101,10 +101,16 @@
 			padding-top: 50px
 			padding-left: 20px 
 
+		&__title
+			font-size: 32px
+			margin-bottom: 14px
+
 	+r(600)
 
 		&__slide
 			height: 550px
+			padding-top: 48px
+			padding-left: 16px
 			&-bg
 				top: auto
 				bottom: 0
@@ -113,7 +119,7 @@
 
 		&__title
 			font-size: 24px
-			margin-bottom: 14px
+			
 
 		&__inner
 			width: 300px
