--- a/src/templates/partials/_header.html
+++ b/src/templates/partials/_header.html
@@ -1,95 +1,106 @@
 {% set linksNavigation = [
-        { title: 'Home', url: '#', mod: 'is-active'},
-        { title: 'Skin concerns', url: '#', children: [
-            {title: 'item 1', url: '#'},
-            {title: 'item 2', url: '#'},
-            {title: 'item 3', url: '#'}
-        ]},
-        { title: 'Shop all', url: '#'},
-        { title: 'Results', url: '#'},
-        { title: 'About us', url: '#'},
-        { title: 'Contacts', url: '#'}
+    { title: 'Home', url: '#', mod: 'is-active'},
+    { title: 'Skin concerns', url: '#', children: [
+    {title: 'item 1', url: '#'},
+    {title: 'item 2', url: '#'},
+    {title: 'item 3', url: '#'}
+    ]},
+    { title: 'Shop all', url: '#'},
+    { title: 'Results', url: '#'},
+    { title: 'About us', url: '#'},
+    { title: 'Contacts', url: '#'}
     ]
-%}
+    %}
 
 
 
-<header class="header">
-    <p class="header__info">Enjoy Free Shipping Worldwide, No Minimum Purchase</p>
-    <div class="header__in">
-        <div class="header__row">
+    <header class="header">
+        <p class="header__info">Enjoy Free Shipping Worldwide, No Minimum Purchase</p>
+        <div class="header__in">
+            <div class="header__row">
 
-            <div class="header__col">
-                <button class="burger">
-                    <svg width="14" height="12" viewBox="0 0 14 12" fill="none" >
-                        <path d="M13.7143 10.2857C13.7143 9.97321 13.4554 9.71429 13.1429 9.71429H0.571429C0.258929 9.71429 0 9.97321 0 10.2857V11.4286C0 11.7411 0.258929 12 0.571429 12H13.1429C13.4554 12 13.7143 11.7411 13.7143 11.4286V10.2857ZM13.7143 5.71429C13.7143 5.40179 13.4554 5.14286 13.1429 5.14286H0.571429C0.258929 5.14286 0 5.40179 0 5.71429V6.85714C0 7.16964 0.258929 7.42857 0.571429 7.42857H13.1429C13.4554 7.42857 13.7143 7.16964 13.7143 6.85714V5.71429ZM13.7143 1.14286C13.7143 0.830357 13.4554 0.571428 13.1429 0.571428H0.571429C0.258929 0.571428 0 0.830357 0 1.14286V2.28571C0 2.59821 0.258929 2.85714 0.571429 2.85714H13.1429C13.4554 2.85714 13.7143 2.59821 13.7143 2.28571V1.14286Z" fill="black"/>
-                    </svg>
-                </button>
+                <div class="header__col">
 
-                {% include "partials/_socials.html" %}
+                    <button class="burger js-open-menu">
+                        <svg width="14" height="12" viewBox="0 0 14 12" fill="none" >
+                            <path d="M13.7143 10.2857C13.7143 9.97321 13.4554 9.71429 13.1429 9.71429H0.571429C0.258929 9.71429 0 9.97321 0 10.2857V11.4286C0 11.7411 0.258929 12 0.571429 12H13.1429C13.4554 12 13.7143 11.7411 13.7143 11.4286V10.2857ZM13.7143 5.71429C13.7143 5.40179 13.4554 5.14286 13.1429 5.14286H0.571429C0.258929 5.14286 0 5.40179 0 5.71429V6.85714C0 7.16964 0.258929 7.42857 0.571429 7.42857H13.1429C13.4554 7.42857 13.7143 7.16964 13.7143 6.85714V5.71429ZM13.7143 1.14286C13.7143 0.830357 13.4554 0.571428 13.1429 0.571428H0.571429C0.258929 0.571428 0 0.830357 0 1.14286V2.28571C0 2.59821 0.258929 2.85714 0.571429 2.85714H13.1429C13.4554 2.85714 13.7143 2.59821 13.7143 2.28571V1.14286Z" fill="black"/>
+                        </svg>
+                    </button>
 
-            </div>
+                    {% include "partials/_socials.html" %}
 
-            <div class="header__logo">
-                <div class="logo">
-                    <img src="./img/logo.png" alt="Logo">
                 </div>
+
+                <div class="header__logo">
+                    <div class="logo">
+                        <img src="./img/logo.png" alt="Logo">
+                    </div>
+                </div>
+
+                <div class="header__col">
+                    <div class="user-block">
+                        <div class="user-block__item">
+                            <button class="search js-search">
+                                <input type="text" class="search__input" placeholder="Search">
+                                <svg viewBox="0 0 23 23" fill="none" >
+                                    <path d="M15.4286 9.57143C15.4286 12.8795 12.7366 15.5714 9.42857 15.5714C6.12054 15.5714 3.42857 12.8795 3.42857 9.57143C3.42857 6.26339 6.12054 3.57143 9.42857 3.57143C12.7366 3.57143 15.4286 6.26339 15.4286 9.57143ZM22.2857 20.7143C22.2857 20.2589 22.0982 19.817 21.7902 19.5089L17.1964 14.9152C18.2813 13.3482 18.8571 11.4732 18.8571 9.57143C18.8571 4.36161 14.6384 0.142856 9.42857 0.142856C4.21875 0.142856 0 4.36161 0 9.57143C0 14.7812 4.21875 19 9.42857 19C11.3304 19 13.2054 18.4241 14.7723 17.3393L19.3661 21.9196C19.6741 22.2411 20.1161 22.4286 20.5714 22.4286C21.5089 22.4286 22.2857 21.6518 22.2857 20.7143Z" fill="black"/>
+                                </svg>
+                            </button>
+                        </div>
+
+                        <div class="user-block__item">
+                            <a href="#" class="bag">
+                                <div class="bag__count">0</div>
+                                <svg viewBox="0 0 26 25" fill="none">
+                                    <path d="M24.5313 19.2857H1.46875L1 23.4777C0.973214 23.7188 1.05357 23.9598 1.21429 24.1473C1.375 24.3214 1.61607 24.4286 1.85714 24.4286H24.1429C24.3839 24.4286 24.625 24.3214 24.7857 24.1473C24.9464 23.9598 25.0268 23.7188 25 23.4777L24.5313 19.2857ZM23.2857 8.04911C23.2321 7.62053 22.8705 7.28571 22.4286 7.28571H19V9C19 9.95089 18.2366 10.7143 17.2857 10.7143C16.3348 10.7143 15.5714 9.95089 15.5714 9V7.28571H10.4286V9C10.4286 9.95089 9.66518 10.7143 8.71429 10.7143C7.76339 10.7143 7 9.95089 7 9V7.28571H3.57143C3.12946 7.28571 2.76786 7.62053 2.71429 8.04911L1.5625 18.4286H24.4375L23.2857 8.04911ZM18.1429 5.57143C18.1429 2.73214 15.8393 0.42857 13 0.42857C10.1607 0.42857 7.85714 2.73214 7.85714 5.57143V9C7.85714 9.46875 8.24554 9.85714 8.71429 9.85714C9.18304 9.85714 9.57143 9.46875 9.57143 9V5.57143C9.57143 3.68303 11.1116 2.14286 13 2.14286C14.8884 2.14286 16.4286 3.68303 16.4286 5.57143V9C16.4286 9.46875 16.817 9.85714 17.2857 9.85714C17.7545 9.85714 18.1429 9.46875 18.1429 9V5.57143Z" fill="black"/>
+                                </svg>
+                            </a>
+                        </div>
+
+                        <div class="user-block__item">
+                            <a href="#" class="user">
+                                <svg viewBox="0 0 18 21" fill="none">
+                                    <path d="M17.1429 17.1652C17.1429 13.6429 16.2723 9.57143 12.7634 9.57143C11.6786 10.6295 10.2054 11.2857 8.57143 11.2857C6.9375 11.2857 5.46429 10.6295 4.37946 9.57143C0.870536 9.57143 0 13.6429 0 17.1652C0 19.1205 1.28571 20.7143 2.85268 20.7143H14.2902C15.8571 20.7143 17.1429 19.1205 17.1429 17.1652ZM13.7143 5.28571C13.7143 2.44643 11.4107 0.142856 8.57143 0.142856C5.73214 0.142856 3.42857 2.44643 3.42857 5.28571C3.42857 8.125 5.73214 10.4286 8.57143 10.4286C11.4107 10.4286 13.7143 8.125 13.7143 5.28571Z" fill="black"/>
+                                </svg>
+                            </a>
+                        </div>
+
+                    </div>
+                </div>
+
+
             </div>
 
-            <div class="header__col">
-                <div class="user-block">
-                    <div class="user-block__item">
-                        <button class="search js-search">
-                            <input type="text" class="search__input" placeholder="Search">
-                            <svg viewBox="0 0 23 23" fill="none" >
-                                <path d="M15.4286 9.57143C15.4286 12.8795 12.7366 15.5714 9.42857 15.5714C6.12054 15.5714 3.42857 12.8795 3.42857 9.57143C3.42857 6.26339 6.12054 3.57143 9.42857 3.57143C12.7366 3.57143 15.4286 6.26339 15.4286 9.57143ZM22.2857 20.7143C22.2857 20.2589 22.0982 19.817 21.7902 19.5089L17.1964 14.9152C18.2813 13.3482 18.8571 11.4732 18.8571 9.57143C18.8571 4.36161 14.6384 0.142856 9.42857 0.142856C4.21875 0.142856 0 4.36161 0 9.57143C0 14.7812 4.21875 19 9.42857 19C11.3304 19 13.2054 18.4241 14.7723 17.3393L19.3661 21.9196C19.6741 22.2411 20.1161 22.4286 20.5714 22.4286C21.5089 22.4286 22.2857 21.6518 22.2857 20.7143Z" fill="black"/>
-                            </svg>
-                        </button>
-                    </div>
+            <div class="header__nav">
+                <nav class="main-nav js-menu">
 
-                    <div class="user-block__item">
-                        <a href="#" class="bag">
-                            <div class="bag__count">0</div>
-                            <svg viewBox="0 0 26 25" fill="none">
-                                <path d="M24.5313 19.2857H1.46875L1 23.4777C0.973214 23.7188 1.05357 23.9598 1.21429 24.1473C1.375 24.3214 1.61607 24.4286 1.85714 24.4286H24.1429C24.3839 24.4286 24.625 24.3214 24.7857 24.1473C24.9464 23.9598 25.0268 23.7188 25 23.4777L24.5313 19.2857ZM23.2857 8.04911C23.2321 7.62053 22.8705 7.28571 22.4286 7.28571H19V9C19 9.95089 18.2366 10.7143 17.2857 10.7143C16.3348 10.7143 15.5714 9.95089 15.5714 9V7.28571H10.4286V9C10.4286 9.95089 9.66518 10.7143 8.71429 10.7143C7.76339 10.7143 7 9.95089 7 9V7.28571H3.57143C3.12946 7.28571 2.76786 7.62053 2.71429 8.04911L1.5625 18.4286H24.4375L23.2857 8.04911ZM18.1429 5.57143C18.1429 2.73214 15.8393 0.42857 13 0.42857C10.1607 0.42857 7.85714 2.73214 7.85714 5.57143V9C7.85714 9.46875 8.24554 9.85714 8.71429 9.85714C9.18304 9.85714 9.57143 9.46875 9.57143 9V5.57143C9.57143 3.68303 11.1116 2.14286 13 2.14286C14.8884 2.14286 16.4286 3.68303 16.4286 5.57143V9C16.4286 9.46875 16.817 9.85714 17.2857 9.85714C17.7545 9.85714 18.1429 9.46875 18.1429 9V5.57143Z" fill="black"/>
-                            </svg>
-                        </a>
-                    </div>
+                    <div class="main-nav__overlay js-close-menu"></div>
 
-                    <div class="user-block__item">
-                        <a href="#" class="user">
-                            <svg viewBox="0 0 18 21" fill="none">
-                                <path d="M17.1429 17.1652C17.1429 13.6429 16.2723 9.57143 12.7634 9.57143C11.6786 10.6295 10.2054 11.2857 8.57143 11.2857C6.9375 11.2857 5.46429 10.6295 4.37946 9.57143C0.870536 9.57143 0 13.6429 0 17.1652C0 19.1205 1.28571 20.7143 2.85268 20.7143H14.2902C15.8571 20.7143 17.1429 19.1205 17.1429 17.1652ZM13.7143 5.28571C13.7143 2.44643 11.4107 0.142856 8.57143 0.142856C5.73214 0.142856 3.42857 2.44643 3.42857 5.28571C3.42857 8.125 5.73214 10.4286 8.57143 10.4286C11.4107 10.4286 13.7143 8.125 13.7143 5.28571Z" fill="black"/>
-                            </svg>
-                        </a>
+                    <div class="main-nav__close">
+                        <button class="js-close-menu"></button>
                     </div>
                     
-                </div>
-            </div>
+                    <div class="main-nav__wrapper">
 
+                        <div class="main-nav__search">
+                            <button class="search search--mobile js-search">
+                                <input type="text" class="search__input" placeholder="Search">
+                                <svg viewBox="0 0 23 23" fill="none" >
+                                    <path d="M15.4286 9.57143C15.4286 12.8795 12.7366 15.5714 9.42857 15.5714C6.12054 15.5714 3.42857 12.8795 3.42857 9.57143C3.42857 6.26339 6.12054 3.57143 9.42857 3.57143C12.7366 3.57143 15.4286 6.26339 15.4286 9.57143ZM22.2857 20.7143C22.2857 20.2589 22.0982 19.817 21.7902 19.5089L17.1964 14.9152C18.2813 13.3482 18.8571 11.4732 18.8571 9.57143C18.8571 4.36161 14.6384 0.142856 9.42857 0.142856C4.21875 0.142856 0 4.36161 0 9.57143C0 14.7812 4.21875 19 9.42857 19C11.3304 19 13.2054 18.4241 14.7723 17.3393L19.3661 21.9196C19.6741 22.2411 20.1161 22.4286 20.5714 22.4286C21.5089 22.4286 22.2857 21.6518 22.2857 20.7143Z" fill="black"/>
+                                </svg>
+                            </button>
+                        </div>
 
-        </div>
-
-        <div class="header__nav">
-
-            <button class="search search--mobile js-search">
-                <input type="text" class="search__input" placeholder="Search">
-                <svg viewBox="0 0 23 23" fill="none" >
-                    <path d="M15.4286 9.57143C15.4286 12.8795 12.7366 15.5714 9.42857 15.5714C6.12054 15.5714 3.42857 12.8795 3.42857 9.57143C3.42857 6.26339 6.12054 3.57143 9.42857 3.57143C12.7366 3.57143 15.4286 6.26339 15.4286 9.57143ZM22.2857 20.7143C22.2857 20.2589 22.0982 19.817 21.7902 19.5089L17.1964 14.9152C18.2813 13.3482 18.8571 11.4732 18.8571 9.57143C18.8571 4.36161 14.6384 0.142856 9.42857 0.142856C4.21875 0.142856 0 4.36161 0 9.57143C0 14.7812 4.21875 19 9.42857 19C11.3304 19 13.2054 18.4241 14.7723 17.3393L19.3661 21.9196C19.6741 22.2411 20.1161 22.4286 20.5714 22.4286C21.5089 22.4286 22.2857 21.6518 22.2857 20.7143Z" fill="black"/>
-                </svg>
-            </button>
-
-            <nav class="main-nav">
-                <ul class="main-nav__list">
-                    {% for link in linksNavigation %}
-                    <li class="main-nav__item">
-                        <a 
-                            href="{{link.url}}" 
-                            class="main-nav__link {% if link.mod %}{{link.mod}}{% endif %} {% if link.children %}main-nav__link--arrow{{link.mod}}{% endif %}"
-                        >
-                            {{link.title}}
-                        </a>
-                        {% if link.children %}
+                        <ul class="main-nav__list">
+                            {% for link in linksNavigation %}
+                            <li class="main-nav__item">
+                                <a 
+                                href="{{link.url}}" 
+                                class="main-nav__link {% if link.mod %}{{link.mod}}{% endif %} {% if link.children %}main-nav__link--arrow{{link.mod}}{% endif %}"
+                                >
+                                {{link.title}}
+                            </a>
+                            {% if link.children %}
                             <ul>
                                 {% for child in link.children %}
                                 <li class="main-nav__item">
@@ -97,13 +108,14 @@
                                 </li>
                                 {% endfor %}
                             </ul>
-                        {% endif %}
-                    </li>
-                    {% endfor %}
-                </ul>
-            </nav>
+                            {% endif %}
+                        </li>
+                        {% endfor %}
+                    </ul>
 
-            {% include "partials/_socials.html" %}
+
+                    {% include "partials/_socials.html" %}
+                </nav>
+            </div>
         </div>
-    </div>
-</header>
+    </header>
